--- a/src/pages/Home/Banner/Banner.css
+++ b/src/pages/Home/Banner/Banner.css
@@ -25,7 +25,7 @@
 }
 .buttons{
     font-weight: 600;
-    color: #233859;
+    color: #275aa9;
     background-color: #f0e246;
     padding: 17px 15px;
     border: 2px solid;
